--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "files.associations": {
         "stdio.h": "c",
         "stdlib.h": "c",
-        "tadcartas.h": "c"
+        "tadcartas.h": "c",
+        "string.h": "c"
     }
 }
